# CloudDrive

./: .gitignore  _check_redis.py  _test_api.py
backend/: Dockerfile  docker-compose.yml  init.sql  main.py  pyproject.toml  requirements.txt  test_adsi.ps1  test_adsi2.ps1  test_cache.ps1  test_children.ps1  test_dc.ps1  test_finddc.ps1  test_ldap.py  test_ldap_proto.ps1
backend/app/: config.py  database.py  models.py
backend/app/routers/: auth.py  cloud_drive.py  ldap_auth.py  microsoft_auth.py
backend/app/services/: auth_service.py  convert_service.py  drive_service.py  ldap_logger.py  redis_client.py
backend/app/utils/: id_utils.py  jwt_util.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/assets/: main.css
frontend/src/components/: CloudDrivePage.vue  LoginPage.vue  RegisterPage.vue
frontend/src/router/: index.js
frontend/src/services/: api.js
